# PythonWeb

./: .gitignore
Web mod 4/: main.py  socket_server.py
Web_mod_4/: Dockerfile  index.html  main.py  pyproject.toml
Web_mod_4/storage/: data.json
Web_mod_4/templates/: index.html  message.html
personal-assistant/: Dockerfile  pyproject.toml
personal-assistant/src/: goose_game.py  main.py  sorter.py
src/: main.py
web mod 3/: sorter.py
web_mod_10/: README.md  pyproject.toml  requirments.txt
web_mod_10/quotes/app/: admin.py  forms.py  urls.py  views.py
web_mod_10/quotes/app/migrations/: 0001_initial.py
web_mod_10/quotes/app/templates/app/: add_author.html  author.html  base.html  tags.html
web_mod_10/quotes/quotes/: urls.py
web_mod_10/quotes/users/: forms.py  models.py  urls.py  views.py
web_mod_10/quotes/users/migrations/: 0001_initial.py  0002_remove_customuser_first_name_and_more.py  0004_alter_customuser_username.py  0005_alter_customuser_username.py
web_mod_10/quotes/users/templates/users/: register.html
web_mod_10/quotes/utils/: config.ini
web_mod_11/: README.md  main.py  pyproject.toml  requirements.txt
web_mod_11/src/: schemas.py
web_mod_11/src/database/: config.ini  db.py  models.py
web_mod_11/src/repository/: contacts.py
web_mod_11/src/routes/: contacts.py
web_mod_12/: README.md  main.py  pyproject.toml  requirements.txt
web_mod_12/src/: schemas.py
web_mod_12/src/database/: models.py
web_mod_12/src/repository/: users.py
web_mod_12/src/routes/: auth.py  contacts.py
web_mod_12/src/services/: auth.py
web_mod_13/: README.md
web_mod_13/django/: pyproject.toml
web_mod_13/django/quotes/: manage.py  migrations.py
web_mod_13/fastapi/: main.py  pyproject.toml
web_mod_14/: main.py  pyproject.toml  readme.md  requirements.txt
web_mod_14/docs/: conf.py
web_mod_14/migrations/: env.py
web_mod_14/tests/: pytest_conf.py  test_unit_repository_contacts.py  test_unit_repository_users.py
web_mod_5/: README.md  main.py
web_mod_6/: .project  data_creator.py  main.py  query_0.sql  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  university.db
web_mod_7/: Dockerfile  README.md  config.ini  main.py  models.py  my_select.py  pyproject.toml  requirement.txt  seed.py
web_mod_7/alembic/: env.py
web_mod_8/: README.md  pyproject.toml  requirementas.txt
web_mod_8/part1/: commands.py  connect.py  load_data.py  models.py  search_quotes.py
web_mod_8/part2/: connect.py  consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py
web_mod_9/: config.ini  pyproject.toml  requirement.txt
web_mod_9/output/: authors.json
(+46 files in other folders)
