yes[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["Adentas <adentaspro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.8"
prompt-toolkit = "^3.0.39"
keyboard = "^0.13.5"
pygame = "^2.5.1"
prettytable = "^3.9.0"
cryptography = "^41.0.3"
openai = "^0.28.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
