[tool.poetry]
name = "mod-10"
version = "0.1.0"
description = ""
authors = ["Adentas <adentaspro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
Django = "^4.2.6"
django-bootstrap4 = "^23.2"
psycopg2 = "^2.9.9"
pandas = "^2.1.2"
bson = "^0.5.10"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
