[tool.poetry]
name = "mod-12"
version = "0.1.0"
description = ""
authors = ["Adentas <adentaspro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
libgravatar = "^1.0.4"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
