[tool.poetry]
name = "mod-7"
version = "0.1.0"
description = ""
authors = ["Adentas <adentaspro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"

[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"
Faker = "^19.11.0"
argparse = "^1.4.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
