[tool.poetry]
name = "mod-9"
version = "0.1.0"
description = ""
authors = ["Adentas <adentaspro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
Scrapy = "^2.11.0"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"
configparser = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
